# resdata

./: .clang-format  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README  README.md  SECURITY.md  UselessFile.txt  WINDOWS.md  appveyor.yml  build.patch  conanfile.py  config.sh  cwrap.patch  dummy.txt  dummy_file.txt  message.patch  pyproject.toml  release-notes.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tull.txt  types_requirements.txt
applications/: CMakeLists.txt  example_ens_plot_batch_file  irap_test.c  polygon_test.c
applications/ecl/: convert.c  ecl_pack.c  ecl_quantile.c  ecl_unpack.c  esummary.c  grdecl_grid.c  grdecl_test.c  grid_dump.c  grid_dump_ascii.c  grid_info.c  grid_layer.c  key_list.c  kw_extract.c  kw_extract.cpp  kw_list.c  load_test.c  make_grid.c  run_gravity.c  select_test.c  sum_write.cpp  summary2csv2.c  view_restart.c  view_rft.c  view_summary.c  view_summary.cpp  vprofile.c
applications/nexus/: nex2ecl.cpp
applications/resdata/: convert.c  convert.cpp  grdecl_grid.c  grdecl_test.c  grdecl_test.cpp  grid_dump.c  grid_dump_ascii.c  grid_info.c  kw_extract.cpp  kw_list.c  kw_list.cpp  load_test.c  load_test.cpp  make_grid.c  rd_pack.c  rd_pack.cpp  rd_unpack.c  rd_unpack.cpp  select_test.c  sum_write.cpp  view_summary.cpp
applications/well/: ri_well_test.c  segment_info.c  well_CF_dump.c
devel/: CMakeLists.txt  Doxyfile  README  SConstruct  Windows.txt  hudson.sh
devel/CMake/: UseMultiArch.cmake  ert_check.cmake  ert_find.cmake
devel/DeepSeeAtlantic/: svn_help.txt
devel/Doc/: Setup-EnKF
devel/Helps/: conditioning.txt  diagnostics.txt  eclipse_data.txt  helpfile.txt  iniensstat.txt  prepobs.txt  referencecase.txt  runmenu.txt
devel/VisualStudio/: stdbool.h
devel/cmake/: cmake_pyc.py  create_cmakelists.py  ert_api_check.cmake  ert_build_check.cmake  ert_check.cmake  ert_find.cmake  ert_lib_check.cmake  ert_link.cmake  python.cmake  python.cmake2  python_module.cmake
devel/debian/: changelog  control
devel/docs/: CMakeLists.txt  build.txt  build_doc.cmake  coding_style.txt  conf.py  configuration.txt  index.rst  svn_help.txt  tips.txt
devel/install/: ERT-example.py  install.py
devel/libecl/: CMakeLists.txt
devel/libecl_well/: CMakeLists.txt
devel/libert_util/: CMakeLists.txt
devel/libert_utilxx/: CMakeLists.txt
devel/libgeometry/: CMakeLists.txt
devel/libkernel/: cost_func.c  cost_func.h  gnuplot.h  kernel_core.h  makefile  matlab.c  matlab.h  pre-image.c  pre-image.h  test.c  test_kernel.c
devel/libplot/: CMakeLists.txt
devel/libutil/: CMakeLists.txt
devel/libwell/: CMakeLists.txt
devel/python/: CMakeLists.txt
devel/redhat/: ert.ecl.spec
devel/scons-config/: global_config.py
ecl3/: CMakeLists.txt
ecl3/lib/: CMakeLists.txt
lib/: CMakeLists.txt  build_config.h.in  build_config.hpp.in  ert_api_config.h.in  ert_api_config.hpp.in  vector_template.h.in  vector_template.hpp.in
lib/ecl/: EclFilename.cpp  FortIO.cpp  Smspec.cpp  ecl_box.cpp  ecl_coarse_cell.cpp  ecl_file.c  ecl_file.cpp  ecl_file_kw.c  ecl_file_kw.cpp  ecl_file_transaction.c  ecl_file_view.c  ecl_file_view.cpp  ecl_grav.cpp  ecl_grav_calc.cpp  ecl_grav_common.cpp  ecl_grid.c  ecl_grid.cpp  ecl_grid_cache.cpp  ecl_grid_dims.cpp  ecl_init_file.cpp  ecl_io_config.cpp  ecl_kw.c  ecl_kw.cpp  ecl_kw_functions.cpp  ecl_kw_grdecl.c  ecl_kw_grdecl.cpp  ecl_nnc_data.c  ecl_nnc_data.cpp  ecl_nnc_export.cpp  ecl_nnc_geometry.cpp  ecl_python_init.c  ecl_region.cpp  ecl_rft_cell.cpp  ecl_rft_file.cpp  ecl_rft_node.cpp  ecl_rst_file.cpp  ecl_rsthead.cpp  ecl_smspec.c  ecl_smspec.cpp  ecl_subsidence.cpp  (+40 more)
lib/geometry/: geo_pointset.cpp  geo_pointset_pybind.cpp  geo_polygon.cpp  geo_polygon_collection.cpp  geo_polygon_collection_pybind.cpp  geo_polygon_pybind.cpp  geo_region.cpp  geo_region_pybind.cpp  geo_surface.cpp  geo_surface_pybind.cpp  geo_util.cpp
lib/nexus/: nexus_plot.c  nexus_plot.cpp  nexus_plot_c.cpp  unit.cpp
lib/python-bind/: CMakeLists.txt  bind_ecl.cpp
lib/python-binding/: CMakeLists.txt  init.cpp  summary.cpp
lib/resdata/: FortIO.cpp  RDFilename.cpp  bool_vector_pybind.cpp  ctime_pybind.cpp  cwrap_pybind.cpp  double_vector_pybind.cpp  fault_block.cpp  fault_block_layer.cpp  fault_block_layer_pybind.cpp  fault_block_pybind.cpp  file_mode_pybind.cpp  fortio.c  fortio_pybind.cpp  geo_region_pybind.cpp  geo_surface_pybind.cpp  grid_dims.cpp  hash_pybind.cpp  install_abort_signals_pybind.cpp  int_vector_pybind.cpp  layer.cpp  layer_pybind.cpp  lookup_table_pybind.cpp  nnc_info.cpp  nnc_vector.cpp  perm_vector_pybind.cpp  py_fault_block_layer.cpp  py_layer.cpp  rd_box.cpp  rd_coarse_cell.cpp  rd_file.cpp  rd_file_kw.cpp  rd_file_pybind.cpp  rd_file_view.cpp  rd_file_view_pybind.cpp  rd_grav.cpp  rd_grav_common.cpp  rd_grav_pybind.cpp  rd_grid.cpp  rd_grid_cache.cpp  rd_grid_dims.cpp  (+57 more)
lib/src/: ecl_kw.cpp  fortio.cpp
lib/test/: fortio.cpp  fuzzy-fortio.cpp  matchers.hpp
lib/tests/: grid_fixtures.hpp  test_ecl_grid.cpp  test_ecl_kw.cpp  test_ecl_util.cpp  test_fault_block_layer.cpp  test_fortio.cpp  test_geertsma.cpp  test_geometry.cpp  test_layer.cpp  test_nnc_info.cpp  test_rd_file_kw.cpp  test_rd_grid.cpp  test_rd_grid_bounds_checking.cpp  test_rd_grid_coarse.cpp  test_rd_grid_compare.cpp  test_rd_grid_misc.cpp  test_rd_grid_nnc_lgr.cpp  test_rd_grid_regular.cpp  test_rd_grid_xyz_lookup.cpp  test_rd_kw.cpp  test_rd_region.cpp  test_rd_sum.cpp  test_rd_type.cpp  test_rd_util.cpp  test_time_index.cpp  test_util.cpp  test_well_info.cpp  test_well_keyword_validation.cpp  testsuite.cpp  tmpdir.hpp
lib/util/: README.md  TestArea.cpp  arg_pack.cpp  buffer.c  buffer.cpp  config_test_input  cxx_string_util.cpp  ecl_version.c  ecl_version.cpp  hash.c  hash.cpp  (+53 more)
libecl/: CMakeLists.txt
libecl_well/: CMakeLists.txt
libeclxx/: CMakeLists.txt
libert_util/: CMakeLists.txt
libert_utilxx/: CMakeLists.txt
libgeometry/: CMakeLists.txt
python/: CMakeLists.txt  check_python  deprecation.txt  setup.py.in  test_env.py.in
(+3462 files in other folders)
